fix: allies swiper location mobile

--- a/style/allies.scss
+++ b/style/allies.scss
@@ -97,7 +97,7 @@
             font-size: 26px;
         }
         &-swiper {
-            top: 350px !important;
+            bottom: 150px !important;
             .swiper-slide {
                 font-size: 18px;
             }
